--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,51 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
+  margin: 0;
   padding: 2rem;
-  text-align: center;
+  /* text-align: center; */
 }
 
+nav {
+  display: flex;
+  justify-content: space-between;
+}
+header {
+  position:fixed;
+  top: 0;
+}
+input, select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=submit] {
+  width: 100%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+.contact {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -34,7 +75,8 @@
 }
 
 .card {
-  padding: 2em;
+  width:100%;
+  /* padding: 2em; */
 }
 
 .read-the-docs {
